--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,9 +12,9 @@ spring-context = { module = "org.springframework:spring-context", version.ref = 
 spring-web = { module = "org.springframework:spring-web", version.ref = "spring-framework" }
 spring-webmcvc = { module = "org.springframework:spring-webmvc", version.ref = "spring-framework" }
 servlet-api = { module = "jakarta.servlet:jakarta.servlet-api", version.ref = "servlet-api-version" }
-nav-common-types = { module = "no.nav.common:types", version.ref = "nav-common" }
-nav-common-auth = { module = "no.nav.common:auth", version.ref = "nav-common" }
-nav-common-abac = { module = "no.nav.common:abac", version.ref = "nav-common" }
+nav-common-types = { module = "com.github.navikt.common-java-modules:types", version.ref = "nav-common" }
+nav-common-auth = { module = "com.github.navikt.common-java-modules:auth", version.ref = "nav-common" }
+nav-common-abac = { module = "com.github.navikt.common-java-modules:abac", version.ref = "nav-common" }
 junit-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit-version" }
 junit-kotlin = { module = "org.jetbrains.kotlin:kotlin-test-junit5" }
 kotest-runner = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest" }
