--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -18,4 +18,4 @@ jobs:
 
       - uses: gradle/gradle-build-action@v2
         with:
-          arguments: build
+          arguments: publish  -Pversion=${{ github.GITHUB_REF_NAME }}-SNAPSHOT
