--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -21,6 +21,6 @@ jobs:
 
       - uses: gradle/gradle-build-action@v2
         with:
-          arguments: publish  -Pversion=${{ github.ref_name }}-SNAPSHOT
+          arguments: publish  -Pversion=${{ github.ref }}-SNAPSHOT
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
