--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 spring-framework = "6.0.5"
-nav-common = "3.2023.06.27_13.10-a13ff6f90290"
-poao-tilgang-version = "2023.06.14_13.11-429ca0f50808"
+nav-common = "3.2023.09.13_04.55-a8ff452fbd94"
+poao-tilgang-version = "2023.10.09_13.45-b5ace74e861a"
 kotest = "5.5.4"
 junit-version = "5.9.1"
 servlet-api-version = "6.0.0"
@@ -13,10 +13,10 @@ spring-context = { module = "org.springframework:spring-context", version.ref = 
 spring-web = { module = "org.springframework:spring-web", version.ref = "spring-framework" }
 spring-webmcvc = { module = "org.springframework:spring-webmvc", version.ref = "spring-framework" }
 servlet-api = { module = "jakarta.servlet:jakarta.servlet-api", version.ref = "servlet-api-version" }
-nav-common-types = { module = "com.github.navikt.common-java-modules:types", version.ref = "nav-common" }
-nav-common-auth = { module = "com.github.navikt.common-java-modules:auth", version.ref = "nav-common" }
-nav-common-audit-log = { module = "com.github.navikt.common-java-modules:audit-log", version.ref = "nav-common" }
-poao-tilgang-client = { module = "com.github.navikt.poao-tilgang:client", version.ref = "poao-tilgang-version" }
+nav-common-types = { module = "no.nav.common:types", version.ref = "nav-common" }
+nav-common-auth = { module = "no.nav.common:auth", version.ref = "nav-common" }
+nav-common-audit-log = { module = "no.nav.common:audit-log", version.ref = "nav-common" }
+poao-tilgang-client = { module = "no.nav.poao-tilgang:client", version.ref = "poao-tilgang-version" }
 
 junit-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit-version" }
 junit-kotlin = { module = "org.jetbrains.kotlin:kotlin-test-junit5" }
