--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,9 @@ junit-version = "5.9.1"
 servlet-api-version = "6.0.0"
 slf4j-version = "1.7.36"
 nimbusds = "9.23"
+jackson = "2.17.0"
 ktor-version= "2.3.7"
+mockk-version = "1.13.10"
 
 [libraries]
 spring-context = { module = "org.springframework:spring-context", version.ref = "spring-framework" }
@@ -30,3 +32,5 @@ kotest-runner = { module = "io.kotest:kotest-runner-junit5", version.ref = "kote
 kotest-assertions = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
 slf4j = { module= "org.slf4j:slf4j-api", version.ref = "slf4j-version" }
 nimbusds-jose-jwt = { module= "com.nimbusds:nimbus-jose-jwt", version.ref = "nimbusds" }
+jackson-core = {module = "com.fasterxml.jackson.core:jackson-core", version.ref = "jackson"}
+mockk = { module = "io.mockk:mockk", version.ref = "mockk-version" }
